--- a/yimi/public/assets/css/plugin.css
+++ b/yimi/public/assets/css/plugin.css
@@ -42,8 +42,8 @@
   width: 100%;
 }
 .gallery-top img{
-	width:100%;
-	height: 200%;
+  width:100%;
+  height: 200%;
 }
 .gallery-thumbs {
   height: 20%;
@@ -51,8 +51,8 @@
   padding: 10px 0;
 }
 .gallery-thumbs img{
-	height:100%;
-	width:98%;
+  height:100%;
+  width:98%;
 }
 .gallery-thumbs .swiper-slide {
   height: 100%;
@@ -63,10 +63,10 @@
 }
 
 .swiper-button-next.arrow-right{
-	background:url(../img/arrow-right.png) no-repeat;
+  background:url(../img/arrow-right.png) no-repeat;
 }
 .swiper-button-prev.arrow-left{
-	background:url(../img/arrow-left.png) no-repeat;
+  background:url(../img/arrow-left.png) no-repeat;
 }
 
 /*瀑布流*/
@@ -130,12 +130,13 @@
 }
 .designer dl{
   width:25%;
+  height:282px;
   float:left;
   position: relative;
   margin-bottom:20px;
 }
 .designer dl dd,.designer dl dt{
-  min-height:100%;
+  height:100%;
 }
 .designer dl dt{
   background: #333;
@@ -146,15 +147,20 @@
   padding-top:102px;
   opacity: 0;
   transition:all 1s;
+  overflow:hidden;
 }
 .buyer dl dt{
   background: rgba(48,45,41,.50);
 }
 .designer dl dd{
   /*text-align: center;*/
+  width:92%;
+  overflow: hidden;
+  text-align: center;
 }
 .designer dl dd img{
-  width:92%;
+  height:100%;
+  width:100%;
 }
 
 @media screen and (max-width:1000px){
@@ -165,6 +171,8 @@
 @media screen and (max-width:760px){
   .designer dl{
     width:50%;
+    height:282px; 
+    overflow:hidden;
   }
 }
 @media screen and (max-width:500px){
