--- a/yimi/public/assets/css/plugin.css
+++ b/yimi/public/assets/css/plugin.css
@@ -90,9 +90,10 @@
     width:24.5%;
 }
 .box{
-    padding: 0px 0 18px 0;
+    padding: 0px 0 14px 0;
     background: #fff;
     margin-bottom:14px;
+    position: relative;
 }
 .box img{
     width:100%;
@@ -100,7 +101,7 @@
 }
 .box span{
   display: block;
-  margin: 20px 2% 0 7%;
+  margin: 16px 2% 0 7%;
   color:#333;
   font-size:14px;
   white-space: nowrap;
@@ -110,6 +111,33 @@
 .box span:hover{
   text-decoration:underline;
   transition:all .5s;
+}
+.showFavor{
+  position: absolute;
+  top: 0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: rgba(0,0,0,0.5);
+  opacity:0;
+}
+.site{
+  position: absolute;
+  top:17%;
+  left:0%;
+}
+.box .showFavor span{
+  display: inline;
+  line-height: 60px;
+  margin-right: 35px;
+  margin-left: 44px;
+  font-size:16px;
+}
+.showEdate2{
+  background: rgba(0,0,0,0.5);
+  display: inline;
+  opacity: 1;
+  transition: all 2s;
 }
 
 /*瀑布iyhc*/
