--- a/yimi/public/assets/css/plugin.css
+++ b/yimi/public/assets/css/plugin.css
@@ -83,6 +83,7 @@
         width:100%;
         overflow: hidden;
         margin-bottom:40px;
+        padding-left: 15px;
     }
 .pin{
     padding: 15px 2% 0 0;
