--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -1,7 +1,31 @@
 /*************index*****************/
+/*index*/
 .litteBannerImg img{
-		width: 100%;
-	}
+	width: 100%;
+}
+#fh5co-board .item{
+	position: relative;
+}
+.itemHover{
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top:0px;
+	background: rgba(48,45,41,.50);
+}
+.itemHover .ico-wrap{
+	margin-top: 0px;
+	position: absolute;
+	top:50%;
+	left:5%;
+	text-align: center;
+}
+#fh5co-board .itemHover .ico-wrap a{
+	display: inline-block;
+	color: #333333;
+}
+/*index end*/
 /*买手推荐*/
 .buyer a{
 	font-size: 12px;
