--- a/yimi/public/assets/css/plugin.css
+++ b/yimi/public/assets/css/plugin.css
@@ -230,3 +230,82 @@
   border:1px solid #e1e1e1;
 }
 
+/*时间轴*/
+.time-axis{
+  margin: 0;
+  padding: 0;
+  position: relative;
+  margin-top: 38px;
+  margin-left: 20px;
+}
+
+.time-axis:before{
+  content: '';
+  position: absolute;
+  left: 0px;
+  top: 15px;
+  width: 1px;
+  height: 82%;
+  background-color: #E4E4E4;
+}
+.time-axis-item{
+  list-style: none;
+  padding-left: 150px;
+  position: relative;
+  line-height: 45px;
+  font-size: 14px;
+  color: #969696;
+}
+.time-axis-achievement{
+  margin: 0;
+}
+.time-axis-date{
+  position: absolute;
+  left: 25px;
+  top: 0;
+  color: #969696;
+}
+
+.time-axis-date span{
+  position: absolute;
+  /* right: -49px; */
+  left: -31px;
+  top: 35%;
+  display: block;
+  width: 13px;
+  height: 13px;
+  /* border: 1px solid #ccc; */
+  border-radius: 100%;
+  background-color: #fff;
+}
+.time-axis-date span:after{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 7px;
+  height: 7px;
+  margin: auto;
+  background-color: #ccc;
+  /* border: 1px solid #ccc; */
+  border-radius: 100%;
+  /* background-color: #ccc; */
+}
+
+.time-axis-item:first-child .time-axis-date span{
+  background-color: #fac6ca;
+  border-color: #48BEB2;
+}
+
+.time-axis-item:first-child .time-axis-date span:after{
+  background-color: #fa471e;
+  border-color: #48BEB2;
+}
+.time-axis-item:first-child .time-axis-title,
+.time-axis-item:first-child .time-axis-date{
+  font-weight: bold;
+  color: #666;
+}
+
