--- a/yimi/public/assets/css/custorm.css
+++ b/yimi/public/assets/css/custorm.css
@@ -54,7 +54,8 @@
 	padding-bottom:50px;
 }
 .detais-content-tit{
-	max-height:426px;
+	max-height:438px;
+	min-height:400px;
 	overflow: auto;
 }
 .ico-wraps{
