--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -112,7 +112,7 @@ select option{
 .suspension .d-qrcode{width:158px;text-align:center;}
 .suspension .d-qrcode .inner-box{padding:20px 0;}
 .suspension .d-qrcode p{font-size:16px;color:#93959c; margin-bottom: 10px;}
-span.icon-yanjing{
-	font-size:22px;
+span.icon-yanjing1{
+	font-size:21px;
 }
 
