--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -311,12 +311,23 @@ ul.nav{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-.side-sub li.active:before{
+/*.side-sub li.active:before{
 	content:"\e080";
 	color:#c8a165;
 	position: absolute;
 	top: 3px;
     left: -24px;
+}*/
+.side-sub li .icon{
+	display: none;
+}
+.side-sub li.active .icon{
+	display: inline-block;
+	color:#c8a165;
+	position: absolute;
+	top: 1px;
+    left: -22px;
+    font-weight:bold;
 }
 .side-sub li.active a{
 	color:#c8a165;
