--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -410,7 +410,7 @@ ul.nav{
 	display: block;
 	padding:0 28px 10px 28px;
 }
-.login-box label input[type="text"]{
+.login-box label input[type="text"],.login-box label input[type="password"]{
 	width:100%;
 	height:32px;
 	line-height: 32px;
