--- a/yimi/public/plugin/swiper/css/swiper.css
+++ b/yimi/public/plugin/swiper/css/swiper.css
@@ -268,12 +268,12 @@
   transform: scale(0.33);
 }
 .swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
+  width: 10px;
+  height: 10px;
   display: inline-block;
   border-radius: 100%;
-  background: #000;
-  opacity: 0.2;
+  background: #fff;
+  /*opacity: 0.2;*/
 }
 button.swiper-pagination-bullet {
   border: none;
@@ -290,7 +290,7 @@ button.swiper-pagination-bullet {
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #007aff;
+  background: #c8a165;
 }
 .swiper-container-vertical > .swiper-pagination-bullets {
   right: 10px;
@@ -318,7 +318,7 @@ button.swiper-pagination-bullet {
   transition: 200ms transform, 200ms top, 200ms -webkit-transform;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 4px;
+  margin: 0 8px;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   left: 50%;
