--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -101,7 +101,10 @@
 }
 
 ul.nav{
-	padding: 18px 0px 22px;
+	padding: 25px 0px 15px;
+}
+.navbar-transparent .navbar-brand{
+	padding-top:10px!important;
 }
 .litteBanner{
 	/*margin:30px auto;*/
@@ -118,6 +121,9 @@ ul.nav{
 .footer{
 	color:#fff;
 	
+}
+.footer .container-fluid{
+	width:100%;
 }
 .bg-black{
 	background: #000;
@@ -162,7 +168,7 @@ ul.nav{
 	color:#fff;
 }
 .footer-middle{
-	padding-top:60px;
+	padding-top:60px!important;
 }
 
 /*f-right*/
@@ -254,7 +260,7 @@ ul.nav{
 
 /*内页主体*/
 .wrapper-page{
-	margin-top: 140px;
+	margin-top: 130px;
 	margin-bottom: 50px;
 	overflow: hidden;
 }
@@ -265,7 +271,7 @@ ul.nav{
 	padding-left:0px;
 	padding-top:0;
 	margin-top:-1px;
-	margin-bottom:14px;
+	margin-bottom:10px;
 }
 
 /*侧边栏*/
@@ -360,6 +366,7 @@ ul.nav{
 	margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
+    overflow-x:hidden;
 }
 /*.sidebar-content label{
 	display: block;
@@ -475,4 +482,7 @@ button.close-btn{
 }
 .swiper1 .swiper-pagination-bullet-active{
 	background:#c8a165!important;
+}
+.navbar-custom .navbar-nav>li>a.hui-eee{
+	color:#ccc!important;
 }
