--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -259,13 +259,13 @@ span.more{
 .checkAllBrand{
 	position: absolute;
     left: 30px;
-    top: 28px;
+    top: 22px;
     background: none;
     border: none;
 }
 
 .check-words{
-	padding: 16px 40px 20px 7%;
+	padding: 9px 40px 20px 7%;
 }
 .check-words li{
 	float: left;
@@ -296,7 +296,7 @@ span.more{
     text-align: center;
 }
 .brandBigImg img{
-	width: 100%;
+	width: 72%;
 }
 .brandText{
 	color: #181818;
@@ -338,10 +338,16 @@ span.more{
 .designer-item{
 	margin-bottom: 30px;
 }
+.designer-item.articles-item{
+	min-height:500px;
+}
 .designer-bg{
 	background: #f7f7f7;
 	height: 100%;
-	padding:5%;
+	padding:36px 5%;
+}
+.designer-bg .designer-text a{
+	color:#333;
 }
 .designer-user{
 	padding:0px;
@@ -365,14 +371,25 @@ span.more{
     font-size: 13px;
     color: #333333;
 }
+.designer-text p a,.designer-text h5 a{
+	color:#333;
+}
 .designer-text p{
-	min-height: 110px;
-	overflow: hidden;
+    max-height: 110px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    display: -moz-box;
+    -moz-line-clamp: 3;
+    -moz-box-orient: vertical;
+    padding-bottom: 30px;
 }
 .designer-text h5{
 	font-size: 14px;
 	font-weight: bold;
-	margin-bottom: 20px;
+	margin-bottom: 12px;
 }
 .designer-text h5 span{
 	font-size: 19px;
