--- a/yimi/public/assets/css/layout.css
+++ b/yimi/public/assets/css/layout.css
@@ -59,7 +59,7 @@
 .navbar-custom .navbar-nav>li.rightLine a,
 .navbar-custom .navbar-nav>li.rightLine a:visited,
 .navbar-custom .navbar-nav>li.rightLine.current a,
-.navbar-custom .navbar-nav>li.rightLine.current a:visite{
+.navbar-custom .navbar-nav>li.rightLine.current a:visited{
 	color: #cecdcd;
 }
 .nav-top-wrap{
