--- a/yimi/public/assets/css/rem.css
+++ b/yimi/public/assets/css/rem.css
@@ -104,6 +104,9 @@ html{
     margin-right: 0.34188rem;
     margin-left: 0.247863rem;
 }
+.ico-wrap{
+	margin-top: 0.512821rem;
+}
 /*设计师详情*/
 .designer-bg{
 	padding-top:0.307692rem;
