--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -570,7 +570,7 @@ span.more{
 	border:none;
 	margin-right: 28px;
 	margin-top:17px;
-	background: url("../img/userSearch.png") 94% no-repeat #fff;
+	background: url("../img/userSearch.png") 276px center no-repeat #fff;
 }
 .searchText a{
 	margin-right: 50px;
@@ -844,6 +844,7 @@ span.more{
 }
 .gray-333{
 	color:#333;
+	padding-left: 15px;
 }
 .order-pt10{
 	padding-top:10px;
@@ -857,6 +858,7 @@ span.more{
 	color:#c2c2c2;
 	margin-left:-34px;
 	padding-left:30px;
+	width: 107%;
 }
 .order-bord-r{
 	border-right:solid 1px #ccc;
@@ -885,12 +887,14 @@ span.more{
 	margin-bottom:30px;
 }
 .order-bord-bm-hui{
+	width: 107%;
 	border-bottom:solid 1px #e1e1e1;
+}
+.order-layout{
 	padding-left: 30px;
     margin-bottom: 10px;
     margin-left:-34px;
 }
-
 .order-r-menu{
 	position: relative;
 }
