--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -114,5 +114,6 @@ select option{
 .suspension .d-qrcode p{font-size:16px;color:#93959c; margin-bottom: 10px;}
 span.icon-yanjing1{
 	font-size:21px;
+	font-weight: bold;
 }
 
