--- a/yimi/public/assets/css/rem.css
+++ b/yimi/public/assets/css/rem.css
@@ -148,6 +148,7 @@ html{
 .article-bg{
 	padding:0px;
 	height: 2.307692rem;
+	margin-bottom: 0.25641rem;
 }
 .article-img,.article-img img{
 	padding: 0px;
