--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -151,7 +151,7 @@
 	display: none;
 }
 .index-title-ul li.more a,span.more a,.more a,.designer-bg .designer-text .more a{
-	color: #cca76f!important;
+	color: #cca76f;
 	font-weight: bold;
 }
 span.more{
@@ -265,7 +265,7 @@ span.more{
 }
 
 .check-words{
-	padding: 9px 40px 20px 7%;
+	padding: 9px 0px 20px 7%;
 }
 .check-words li{
 	float: left;
