--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -78,7 +78,11 @@ select option{
 /*悬浮链接*/
 .suspension{position:fixed;z-index:55;right:0;bottom:85px;width:44px;height:240px;}
 .suspension-box{position:relative;float:right;}
-.suspension .a{display:block;width:44px;height:44px;background-color:#636363;margin-bottom:4px;cursor:pointer;outline:none;}
+.suspension .a{display:block;width:44px;height:44px;background-color:#636363;margin-bottom:4px;cursor:pointer;outline:none; text-align:center;}
+.suspension .a i{
+	color:#fff;
+	font-size:24px;
+}
 .suspension .a.active,
 .suspension .a:hover{background:#333333;}
 .suspension .a .i{float:left;width:44px;height:44px;background-image:url(../img/side_icon.png);background-repeat:no-repeat;}
@@ -117,3 +121,15 @@ span.icon-yanjing1{
 	font-weight: bold;
 }
 
+/*自定义select*/
+
+.model-select-box { width: 110px; height: 36px; line-height: 36px; border: 1px solid #ddd; float: left; margin-right: 20px; text-indent: 5px; position: relative; margin-left:15px; margin-top:-5px;}
+.model-select-text { height: 100%; padding-right: 27px; background: url(http://t43-2.yunpan.360.cn/p/800-600.e692334dad266bef653533e12fa291286932eb10.3619c0.jpg?t=64368e238226776012c7ea2a6ad4dcce&d=20140221) no-repeat right 0; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
+.model-select-option { display: none; position: absolute; background: #fff; width: 102%; left: -1px; border: 1px solid #ddd; z-index:100;}
+.model-select-option li { height: 32px; line-height: 32px; color: #555; cursor: pointer; }
+.model-select-option li.seleced { background: #c8a165; color: #fff; }
+.sanjiao{
+	position: absolute;
+	left:76%!important;
+	top:10px!important;
+}
