--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -315,6 +315,8 @@ span.more{
 .brandText p{
 	text-indent:1em;
 	padding-right:20px;
+	word-break:break-all;
+	word-wrap:break-word;
 }
 .brandList li img{
 	width: 72%;
