--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -131,5 +131,8 @@ span.icon-yanjing1{
 .sanjiao{
 	position: absolute;
 	left:76%!important;
-	top:10px!important;
+	top:11px!important;
+	font-size:10px;
+	color:#ccc;
 }
+.glyphicon-heart {color:#c8a165!important}
