--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -136,3 +136,7 @@ span.icon-yanjing1{
 	color:#ccc;
 }
 .glyphicon-heart {color:#c8a165!important}
+.nav-top-right a.user{
+	width:auto;
+	padding:0 14px;
+}
