--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -124,9 +124,9 @@ span.icon-yanjing1{
 /*自定义select*/
 
 .model-select-box { width: 110px; height: 36px; line-height: 36px; border: 1px solid #ddd; float: left; margin-right: 20px; text-indent: 5px; position: relative; margin-left:15px; margin-top:-5px;}
-.model-select-text { height: 100%; padding-right: 27px; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
+.model-select-text { height: 100%; padding-right: 27px; padding-left:10px; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
 .model-select-option { display: none; position: absolute; background: #fff; width: 102%; left: -1px; border: 1px solid #ddd; z-index:100;}
-.model-select-option li { height: 32px; line-height: 32px; color: #555; cursor: pointer; }
+.model-select-option li { height: 32px; line-height: 32px; color: #555; cursor: pointer; padding-left:10px;}
 .model-select-option li.seleced { background: #c8a165; color: #fff; }
 .sanjiao{
 	position: absolute;
@@ -139,4 +139,7 @@ span.icon-yanjing1{
 .nav-top-right a.user{
 	width:auto;
 	padding:0 14px;
+}
+.min-h600{
+	min-height:600px;
 }
