--- a/yimi/public/assets/css/page.css
+++ b/yimi/public/assets/css/page.css
@@ -341,7 +341,7 @@ span.more{
 	margin-bottom: 30px;
 }
 .designer-item.articles-item{
-	min-height:500px;
+	/*min-height:500px;*/
 }
 .designer-bg,.article-bg{
 	background: #f7f7f7;
@@ -1061,4 +1061,7 @@ span.more{
 }
 .bg-hui-f7 .articles-wrap{
 	min-height:580px;
+}
+.datetimepicker{
+	top:798px!important;
 }
