--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -143,3 +143,6 @@ span.icon-yanjing1{
 .min-h600{
 	min-height:600px;
 }
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
