--- a/yimi/public/assets/css/common.css
+++ b/yimi/public/assets/css/common.css
@@ -146,3 +146,6 @@ span.icon-yanjing1{
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
+.glyphicon-heart-empty,.glyphicon-heart{
+	cursor: pointer;
+}
